--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,22 +14,24 @@
     "dependencies": {
         "@eduvideogen/database": "*",
         "@eduvideogen/shared-types": "*",
-        "@nestjs/common": "^10.0.0",
+        "@nestjs/common": "^11.1.11",
         "@nestjs/config": "^4.0.2",
-        "@nestjs/core": "^10.0.0",
+        "@nestjs/core": "^11.1.11",
         "@nestjs/mapped-types": "*",
-        "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/platform-express": "^11.1.11",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "dotenv": "^17.2.3",
+        "fast-safe-stringify": "^2.1.1",
         "openai": "^4.0.0",
         "reflect-metadata": "^0.1.13",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.1",
+        "vite": "7.3.1"
     },
     "devDependencies": {
-        "@nestjs/cli": "^10.0.0",
-        "@nestjs/schematics": "^10.0.0",
-        "@nestjs/testing": "^10.0.0",
+        "@nestjs/cli": "^11.0.0",
+        "@nestjs/schematics": "^11.0.0",
+        "@nestjs/testing": "^11.1.11",
         "@types/express": "^4.17.17",
         "@types/node": "^20.3.1",
         "source-map-support": "^0.5.21",
