--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,11 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@eduvideogen/shared-types": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.51.0",
-        "react-router-dom": "^6.22.3",
-        "@eduvideogen/shared-types": "*"
+        "react-router-dom": "^6.22.3"
     },
     "devDependencies": {
         "@types/react": "^18.2.66",
@@ -24,6 +24,6 @@
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.3",
         "typescript": "^5.2.2",
-        "vite": "^5.2.0"
+        "vite": "^7.3.1"
     }
 }
