--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   ],
   "dependencies": {
     "@prisma/client": "^5.22.0"
+  },
+  "overrides": {
+    "glob": "^10.3.10",
+    "inquirer": "^9.0.0"
   }
 }
