--- a/packages/shared-types/package.json
+++ b/packages/shared-types/package.json
@@ -1,9 +1,10 @@
 {
     "name": "@eduvideogen/shared-types",
     "version": "0.0.0",
-    "main": "./src/index.ts",
-    "types": "./src/index.ts",
+    "main": "./dist/index.js",
+    "types": "./dist/index.d.ts",
     "scripts": {
+        "build": "tsc",
         "lint": "eslint ."
     },
     "devDependencies": {
