--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.965.0",
         "@eduvideogen/database": "*",
         "@eduvideogen/shared-types": "*",
         "@nestjs/common": "^11.1.11",
@@ -33,6 +34,7 @@
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.1.11",
         "@types/express": "^4.17.17",
+        "@types/multer": "^2.0.0",
         "@types/node": "^20.3.1",
         "source-map-support": "^0.5.21",
         "ts-loader": "^9.4.3",
